--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -42,8 +42,11 @@ jobs:
       - name: Output Main Required Reviewers
         id: rr
         run: |
-         
-         echo "RRS=$(cat .github/CODEOWNERS-custom)" >> $GITHUB_ENV
+         cat .github/CODEOWNERS-custom | while read line
+          do
+            echo $line >> tmp.txt
+          done
+         echo "RRS=$(cat tmp.txt)" >> $GITHUB_OUTPUT
          
         # Make sure we have some code to diff.
       - name: Checkout repository
@@ -57,7 +60,7 @@ jobs:
         # Set outputs using the command.
         run: |
           echo "RRS"
-          echo ${{ env.RRS }}
+          echo ${{ steps.rr.outputs.RRS }}
        
           diffs=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }})
           git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} >> diffs.txt
