--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -8,7 +8,7 @@ on:
 jobs:       
   changedfiles:
     runs-on: ubuntu-latest
-
+    environment: Dev
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
