--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -92,7 +92,10 @@ jobs:
         TF_VAR_base_url: "oktapreview.com"
         TF_VAR_api_token: ${{ secrets.TF_VAR_ev_api_token }}
         TF_VAR_env: 'dev'
-      run: terraform plan -input=false
+      run: |
+        terraform plan -input=false -detailed-exitcode
+        echo "plan_output=$($?)"  >> $GITHUB_OUTPUT
+        echo $plan_output
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
