--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -94,9 +94,7 @@ jobs:
         TF_VAR_env: 'dev'
       run: |
         terraform plan -input=false -detailed-exitcode
-        echo "plan_output=$($?)"  >> $GITHUB_OUTPUT
-        echo $plan_output
-
+        echo $?
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
