--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -43,7 +43,7 @@ jobs:
         TF_VAR_env: 'dev'
       run: |
         terraform plan -input=false -detailed-exitcode
-        echo "plan_output=$?" >> $GITHUB_ENV
+        echo "plan_output=test" >> $GITHUB_ENV
         echo "${{ env.plan_output }}"
     - name: Terraform Apply
       env:
