--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -47,7 +47,7 @@ jobs:
           echo "CODEOWNERS.TXT"
           cat codeowners.txt
 
-          if ! grep -f diffs.txt codeowners.txt | grep -o "@\S*" >> required_reviewers.txt; then
+          if ! grep -fw diffs.txt codeowners.txt | grep -o "@\S*" >> required_reviewers.txt; then
             echo "No matches" >> required_reviewers.txt
           fi
           sed -i 's/@//g' required_reviewers.txt
