--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -51,6 +51,9 @@ jobs:
           echo "CODEOWNERS.TXT"
           cat codeowners.txt
 
+          echo "GREP"
+          grep -Ef diffs_regex.txt codeowners.txt
+          
           if ! grep -Ef diffs_regex.txt codeowners.txt | grep -o "@\S*" >> required_reviewers.txt; then
             echo "No matches" >> required_reviewers.txt
           fi
