--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,6 +27,7 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+         terraform_version: 1.6.0
     - name: Terraform Init
       run: terraform init
     - name: Terraform Plan
