--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -39,6 +39,7 @@ jobs:
       run: |
         echo "${{ vars.TF_VAR_org_name }}"
         echo "${{ vars.TF_VAR_base_url }}"
+        echo "${{ secrets.TF_VAR_api_token }}"
         terraform plan -input=false
     - name: Terraform Apply
       run: |
