--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,5 +45,6 @@ jobs:
       run: |
         terraform apply -auto-approve -input=false
         terraform output
-    - name: Download all workflow run artifacts
-      uses: actions/download-artifact@v3
+        ls
+        cat output
+
