--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,4 +44,4 @@ jobs:
     - name: Terraform Apply
       run: |
         terraform apply -auto-approve -input=false
-        terraform output
+        terraform output -raw t_value
