--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
       with:
-         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+         cli_config_credentials_token: ${{ secrets.CLOUD_SECRET }}
          terraform_version: 1.6.0
     - name: Terraform Init
       run: terraform init
