--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,6 +15,7 @@ jobs:
     env:
       org_name: ${{ vars.TF_VAR_org_name }}
       base_url: ${{ vars.TF_VAR_base_url }}
+      test_value: 00qbbg0HkcvtT7DuiFOzRhBlk0WmE3Rmc_Sfj8MVb8
       api_token: 00qbbg0HkcvtT7DuiFOzRhBlk0WmE3Rmc_Sfj8MVb8
       env: 'personal-test'
     
@@ -45,3 +46,4 @@ jobs:
       run: |
         terraform apply -auto-approve -input=false
         terraform output -raw t_value
+        terraform outoput -raw test_value_value
