--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,6 +37,12 @@ jobs:
     - name: Terraform Init
       run: terraform init
     - name: Terraform Plan
+      env:
+        TF_VAR_org_name: ${{ vars.TF_VAR_org_name }}
+        TF_VAR_base_url: ${{ vars.TF_VAR_base_url }}
+        TF_VAR_test_value: 00qbbg0HkcvtT7DuiFOzRhBlk0WmE3Rmc_Sfj8MVb8
+        TF_VAR_api_token: 00qbbg0HkcvtT7DuiFOzRhBlk0WmE3Rmc_Sfj8MVb8
+        TF_VAR_env: 'personal-test'
       run: |
         echo "${{ vars.TF_VAR_org_name }}"
         echo "${{ vars.TF_VAR_base_url }}"
