--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -40,7 +40,7 @@ jobs:
       env:
         TF_VAR_org_name: ${{ vars.TF_VAR_org_name }}
         TF_VAR_base_url: ${{ vars.TF_VAR_base_url }}
-        TF_VAR_test_value: 00qbbg0HkcvtT7DuiFOzRhBlk0WmE3Rmc_Sfj8MVb8
+        TF_VAR_test_value: 'test_value'
         TF_VAR_api_token: 00qbbg0HkcvtT7DuiFOzRhBlk0WmE3Rmc_Sfj8MVb8
         TF_VAR_env: 'personal-test'
       run: |
