--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,7 +32,7 @@ jobs:
       uses: hashicorp/setup-terraform@v2
       with:
          terraform_version: 1.6.0
-         cli_config_credentials_token: ${{ secrets.CLOUD_TOKEN }}
+         cli_config_credentials_token: ${{ secrets.CLOUD_SECRET }}
     - name: Terraform Init
       run: terraform init
     - name: Terraform Plan
