--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,8 +22,8 @@ jobs:
           GH_TOKEN: ${{ secrets.ORG_TOKEN }}
         run: |
           
-          gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/actions/workflows/eval_pr.yml/runs?branch=rtysfgd
-          
+          workflow_id=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/actions/workflows/eval_pr.yml/runs?branch=rtysfgd | jq '.id')
+          echo $workflow_id
 #          echo "laurenmnaylor" >> approvers.txt
 #          echo "tjzwieg" >> approvers.txt
 #         
