--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,7 +23,8 @@ jobs:
         run: |
           
           workflow_id=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/actions/workflows/eval_pr.yml/runs?branch=rtysfgd | jq '.workflow_runs | .[].id')
-          echo $workflow_id
+          gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/actions/runs/$workflow_id/rerun
+          
 #          echo "laurenmnaylor" >> approvers.txt
 #          echo "tjzwieg" >> approvers.txt
 #         
