--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,38 +28,38 @@ jobs:
           cat rerun.sh
           ./rerun.sh
           
-#          echo "laurenmnaylor" >> approvers.txt
-#          echo "tjzwieg" >> approvers.txt
-#         
-#
-#          echo "laurenmnaylor" >> required_reviewers.txt
-#          echo "okta" >> required_reviewers.txt
-#
-#          
-#
-#          cat approvers.txt | while read line
-#          do
-#         
-#            gh api graphql -f query='query GetTeamMembers {
-#              organization(login: "Eaton-Vance-Corp") {
-#              teams(first: 100, userLogins: ["'"$line"'"]) {
-#                totalCount
-#                  edges {
-#                    node {
-#                      slug
-#                    }
-#                  }
-#                }
-#              }
-#         
-#              }' | jq '.data.organization.teams.edges[].node.slug' >> approvers_teams.txt
-#
-#
-#          done
-#          sed -i 's/"//g' approvers_teams.txt
-#          cat approvers.txt approvers_teams.txt >> approvers_all.txt
-#          echo "FINAL LIST"
-#          cat approvers_all.txt
+          echo "laurenmnaylor" >> approvers.txt
+          echo "tjzwieg" >> approvers.txt
+
+
+          echo "laurenmnaylor" >> required_reviewers.txt
+          echo "okta" >> required_reviewers.txt
+
+
+
+          cat approvers.txt | while read line
+          do
+
+            gh api graphql -f query='query GetTeamMembers {
+              organization(login: "Eaton-Vance-Corp") {
+              teams(first: 100, userLogins: ["'"$line"'"]) {
+                totalCount
+                  edges {
+                    node {
+                      slug
+                    }
+                  }
+                }
+              }
+
+              }' | jq '.data.organization.teams.edges[].node.slug' >> approvers_teams.txt
+
+
+          done
+          sed -i 's/"//g' approvers_teams.txt
+          cat approvers.txt approvers_teams.txt >> approvers_all.txt
+          echo "FINAL LIST"
+          cat approvers_all.txt
 
          
           
