--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,7 @@
 name: 'Pull Request2'
 
 on:
-  workflow_dispatch: 
+  pull_request: 
 
 permissions: write-all
 
@@ -20,46 +20,49 @@ jobs:
         id: changes
         env:
           GH_TOKEN: ${{ secrets.ORG_TOKEN }}
+          GITHUB_CONTEXT: ${{ toJson(github) }}
         run: |
           
-          workflow_id=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/actions/workflows/eval_pr.yml/runs?branch=afdgasdf | jq '.workflow_runs | .[].id')
-          echo "gh api -X POST -H \"Accept: application/vnd.github+json\" -H \"X-GitHub-Api-Version: 2022-11-28\" /repos/laurenmnaylor/terraform-okta-test/actions/runs/$workflow_id/rerun" >> rerun.sh
-          chmod +x rerun.sh
-          cat rerun.sh
-          ./rerun.sh
+          echo "$GITHUB_CONTEXT"
           
-          echo "laurenmnaylor" >> approvers.txt
-          echo "tjzwieg" >> approvers.txt
-
-
-          echo "laurenmnaylor" >> required_reviewers.txt
-          echo "okta" >> required_reviewers.txt
-
-
-
-          cat approvers.txt | while read line
-          do
-
-            gh api graphql -f query='query GetTeamMembers {
-              organization(login: "Eaton-Vance-Corp") {
-              teams(first: 100, userLogins: ["'"$line"'"]) {
-                totalCount
-                  edges {
-                    node {
-                      slug
-                    }
-                  }
-                }
-              }
-
-              }' | jq '.data.organization.teams.edges[].node.slug' >> approvers_teams.txt
-
-
-          done
-          sed -i 's/"//g' approvers_teams.txt
-          cat approvers.txt approvers_teams.txt >> approvers_all.txt
-          echo "FINAL LIST"
-          cat approvers_all.txt
+#          workflow_id=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/actions/workflows/eval_pr.yml/runs?branch=afdgasdf | jq '.workflow_runs | .[].id')
+#          echo "gh api -X POST -H \"Accept: application/vnd.github+json\" -H \"X-GitHub-Api-Version: 2022-11-28\" /repos/laurenmnaylor/terraform-okta-test/actions/runs/$workflow_id/rerun" >> rerun.sh
+#          chmod +x rerun.sh
+#          cat rerun.sh
+#          ./rerun.sh
+#          
+#          echo "laurenmnaylor" >> approvers.txt
+#          echo "tjzwieg" >> approvers.txt
+#
+#
+#          echo "laurenmnaylor" >> required_reviewers.txt
+#          echo "okta" >> required_reviewers.txt
+#
+#
+#
+#          cat approvers.txt | while read line
+#          do
+#
+#            gh api graphql -f query='query GetTeamMembers {
+#              organization(login: "Eaton-Vance-Corp") {
+#              teams(first: 100, userLogins: ["'"$line"'"]) {
+#                totalCount
+#                  edges {
+#                    node {
+#                      slug
+#                    }
+#                  }
+#                }
+#              }
+#
+#              }' | jq '.data.organization.teams.edges[].node.slug' >> approvers_teams.txt
+#
+#
+#          done
+#          sed -i 's/"//g' approvers_teams.txt
+#          cat approvers.txt approvers_teams.txt >> approvers_all.txt
+#          echo "FINAL LIST"
+#          cat approvers_all.txt
 
          
           
