--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,11 +20,10 @@ jobs:
         id: changes
         env:
           GH_TOKEN: ${{ secrets.ORG_TOKEN }}
-          GITHUB_CONTEXT: ${{ toJson(github) }}
         run: |
           
-          echo "$GITHUB_CONTEXT"
-          
+          echo "BRANCH"
+          echo ${{ github.event.pull_request.head.ref }}
 #          workflow_id=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/actions/workflows/eval_pr.yml/runs?branch=afdgasdf | jq '.workflow_runs | .[].id')
 #          echo "gh api -X POST -H \"Accept: application/vnd.github+json\" -H \"X-GitHub-Api-Version: 2022-11-28\" /repos/laurenmnaylor/terraform-okta-test/actions/runs/$workflow_id/rerun" >> rerun.sh
 #          chmod +x rerun.sh
