--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,7 @@
 name: 'Pull Request2'
 
 on:
-  pull_request: 
+  workflow_dispatch: 
 
 permissions: write-all
 
@@ -22,13 +22,20 @@ jobs:
           GH_TOKEN: ${{ secrets.ORG_TOKEN }}
         run: |
           
-          echo "BRANCH"
-          echo ${{ github.event.pull_request.head.ref }}
+          cat > test.txt
+          echo "TEST" >> test.txt
+          git add test.txt
+          git commit -m 'Adding test.txt'
+          git push origin main
+          
 #          workflow_id=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/actions/workflows/eval_pr.yml/runs?branch=afdgasdf | jq '.workflow_runs | .[].id')
 #          echo "gh api -X POST -H \"Accept: application/vnd.github+json\" -H \"X-GitHub-Api-Version: 2022-11-28\" /repos/laurenmnaylor/terraform-okta-test/actions/runs/$workflow_id/rerun" >> rerun.sh
 #          chmod +x rerun.sh
 #          cat rerun.sh
 #          ./rerun.sh
+          
+#          echo "BRANCH"
+#          echo ${{ github.event.pull_request.head.ref }}
 #          
 #          echo "laurenmnaylor" >> approvers.txt
 #          echo "tjzwieg" >> approvers.txt
