--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,9 @@ jobs:
           GH_TOKEN: ${{ secrets.ORG_TOKEN }}
         run: |
           
+          git config user.email "lnaylor@paraport.com"
+          git config user.name "Lauren Naylor"
+          
           cat > test.txt
           echo "TEST" >> test.txt
           git add test.txt
