--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,10 @@
 name: 'Pull Request2'
 
 on:
-  workflow_dispatch: 
+  pull_request_review:
+    types: [ submitted, edited, dismissed ]
+  pull_request:
+    types: [ edited, reopened, synchronize ]
 
 permissions: write-all
 
@@ -22,15 +25,17 @@ jobs:
           GH_TOKEN: ${{ secrets.ORG_TOKEN }}
         run: |
           
-          git config user.email "lnaylor@paraport.com"
-          git config user.name "Lauren Naylor"
+          echo "Testing"
           
-          cat > test.txt
-          echo "TEST" >> test.txt
-          git add test.txt
-          git commit -m 'Adding test.txt'
-          git push origin main
-          
+#          git config user.email "lnaylor@paraport.com"
+#          git config user.name "Lauren Naylor"
+#          
+#          cat > test.txt
+#          echo "TEST" >> test.txt
+#          git add test.txt
+#          git commit -m 'Adding test.txt'
+#          git push origin main
+#          
 #          workflow_id=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/actions/workflows/eval_pr.yml/runs?branch=afdgasdf | jq '.workflow_runs | .[].id')
 #          echo "gh api -X POST -H \"Accept: application/vnd.github+json\" -H \"X-GitHub-Api-Version: 2022-11-28\" /repos/laurenmnaylor/terraform-okta-test/actions/runs/$workflow_id/rerun" >> rerun.sh
 #          chmod +x rerun.sh
