--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -2,9 +2,7 @@ name: 'Pull Request'
 
 on:
   pull_request:
-  pull_request_review:
-    types: [submitted]
-  workflow_call: 
+    types: [opened]
 
 jobs:       
   changedfiles:
