update action name

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,7 @@ on:
 permissions: write-all
 
 jobs:
-  changedfiles:
+  rerunjob:
     runs-on: ubuntu-latest
     permissions: write-all
     environment: Personal-Test
