--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,6 +17,7 @@ jobs:
       TF_VAR_base_url: ${{ vars.TF_VAR_base_url }}
       TF_VAR_api_token: ${{ secrets.TF_VAR_API_TOKEN }}
       TF_VAR_env: 'personal-test'
+      TF_LOG: 'TRACE'
     
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
