--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -1,8 +1,10 @@
 name: 'Pull Request'
 
 on:
+  pull_request_review:
+    types: [ submitted, edited, dismissed ]
   pull_request:
-    types: [opened]
+    types: [opened, edited, reopened, synchronize ]
 
 jobs:       
   changedfiles:
