--- a/.github/workflows/generate-key.yml
+++ b/.github/workflows/generate-key.yml
@@ -38,6 +38,7 @@ jobs:
           
           echo "curl -s -D headers.txt -X GET -H \"Accept: application/json\" -H \"Content-Type: application/json\" -H \"Authorization: Bearer $token\" \"${url}\"" > curl.sh
           cat curl.sh
-         ./curl.sh
+          result=$(./curl.sh)
+          echo $result
 
           
